Add poky submodule on kirkstone branch

--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = assignment-autotest
 	url = git@github.com:cu-ecen-aeld/aesd-assignments.git
 	branch = assignment6
+[submodule "poky"]
+	path = poky
+	url = https://git.yoctoproject.org/poky
+	branch = kirkstone
