--- a/.github/workflows/github-actions.yml
+++ b/.github/workflows/github-actions.yml
@@ -8,7 +8,7 @@ on:
 jobs:
     full-test:
         container: cuaesd/aesd-autotest:24-assignment6
-        runs-on: ubunto latest
+        runs-on: ubuntu-latest
         steps:
           - uses: actions/checkout@v2
           - name: Checkout submodules
